# Django-Web.Test

./: README.md  manage.py  pyproject.toml
anmsg/: asgi.py  settings.py  urls.py  wsgi.py
core/: urls.py  views.py
templates/core/: index.html
users/: admin.py  models.py  signals.py
users/migrations/: 0001_initial.py
